manifests/odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: odoo
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: cnpg.io/cluster
                      operator: Exists
                    - key: role
                      operator: In
                      values:
                        - primary
                topologyKey: kubernetes.io/hostname
      containers:
        - name: odoo
          image: helppls.azurecr.io/odoo-kubernetes:latest
          imagePullPolicy: Always
          env: *env
          envFrom: *envFrom
          resources:
            limits:
              cpu: "500m"
              memory: 1Gi
            requests:
              cpu: "250m"
              memory: 1Gi
          ports:
            - containerPort: 8069
              name: web
            - containerPort: 8072
              name: websocket
          readinessProbe:
            httpGet:
              path: /web/health
              port: 8069
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
